2002-06-22  Bart Schaefer  <schaefer@zsh.org>

	* users/5073: Completion/compdump: use `typeset +f' instead of
	`whence -w' to get names of completion functions.

2002-06-20  Peter Stephenson  <pws@csr.com>

	* 17334: Src/builtin.c, Src/options.c, Src/params.c, Src/zsh.h,
	Doc/Zsh/builtins.yo, Doc/Zsh/options.yo: add TYPESET_SILENT
	shell option and `typeset -p' option.

2002-06-17  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk, Completion/Unix/Command/.distfile,
	Doc/Zsh.distfiles, Functions/Zle/.distfiles: version 4.1.0-dev-5.

2002-06-14  Peter Stephenson  <pws@csr.com>

	* 17318: Src/hist.c: ${(z)...} appended an extra space when the
	lexical analyser failed.

2002-06-07  Peter Stephenson  <pws@csr.com>

	* 17304: Src/Zle/zle_main.c, Doc/Zsh/zle.yo: (suggested by Bart)
	tweak the tweaked tweak in 17301 so that zle -I returns status
	0 if zle display was successfully invalidated even if by a
	previous call to zle -I (user doesn't care). 

	* 17299: Src/builtin.c, Src/exec.c, Src/init.c, Src/parse.c,
	Src/text.c, Src/zsh.h: Instead of freeing Eprogs in one go
	at the top level, use reference counts.

	* 17301 (doc slightly tweaked): Src/Zle/zle_thingy.c,
	Doc/Zsh/zle.yo: make `zle -I' only invalidate the display on the
	first call to prevent spurious extra command lines appearing.

2002-06-06  Peter Stephenson  <pws@csr.com>

	* 17293: Src/Zle/zle_main.c, Doc/Zsh/zle.yo: support poll()
	as a (preferred) alternative to select() in zle.

2002-06-06  Clint Adams  <clint@zsh.org>

	* 17297: Src/Modules/zpty.c: 17265 continued.

2002-06-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17295: Src/Zle/zle_thingy.c: `zle -F' could fail because
	it examined non-existent arguments.

	* 17294: Src/Modules/tcp.c: remove session even if closing fd
	failed; remove builtin from hash table when unloading module.

2002-06-05  Peter Stephenson  <pws@csr.com>

	* 17292: Src/builtin.c: shut up compiler if no OPEN_MEMSTREAM.
